java 8 fixes